@@ -3,6 +3,7 @@
 	* buffer_zlib.cc, buffer_zlib.h: implement inflator.
 	* Http.cc, Http.h: add support for gzip Content-Encoding.
 	* Makefile.am: buffer_zlib for proto-http.
+	* buffer.cc, buffer.h: (SetTranslator) translate unread data.
 
 2013-05-27  Alexander V. Lukyanov <lav@yars.free.net>
 
